syntax = "proto3";

package product;

option go_package = "order-service/pkg/api/product/v1;product_v1";

service ProductService {
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
  rpc GetProducts(GetProductsRequest) returns (ProductsResponse);
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
  rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse);
}

message GetProductRequest {
  int64 id = 1;
}

message GetProductsRequest {
  repeated int64 ids = 1;
}

message CheckStockRequest {
  int64 product_id = 1;
  int32 quantity = 2;
}

message CheckStockResponse {
  bool available = 1;
  int32 current_stock = 2;
}

message UpdateStockRequest {
  int64 product_id = 1;
  int32 quantity_delta = 2;
}

message UpdateStockResponse {
  int32 new_stock = 1;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string created_at = 6;
  string updated_at = 7;
}

message ProductsResponse {
  repeated ProductResponse products = 1;
}
